<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_white"
        tools:context=".TelaPrincipal">


        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@drawable/background_view_dash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvUserName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_welcome"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="13dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="NOME_USUARIO"
            android:textColor="@color/white"
            android:textAppearance="?attr/textAppearanceHeadline4"
            app:layout_constraintTop_toBottomOf="@id/tvWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="3dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="50dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:gravity="start" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoutSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/containerTop"
            app:layout_constraintBottom_toBottomOf="@id/containerTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.9"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchAnamnese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_search"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="9dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_searche" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btCriarAnamnese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_button_dash"
            android:enabled="true"
            android:text="@string/txt_criarAnamnese"
            android:textAllCaps="false"
            android:padding="16dp"
            android:drawableTop="@drawable/ic_createanamnese"
            app:layout_constraintEnd_toStartOf="@+id/btAnamanesesList"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/containerTop"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btAnamanesesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/background_button_dash"
            android:enabled="true"
            android:text="@string/txt_listAnamnese"
            android:textAllCaps="false"
            android:drawableTop="@drawable/ic_listanamnese"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btCriarAnamnese"
            app:layout_constraintTop_toBottomOf="@id/containerTop" />



    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>
