<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true">


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_cyan_green"
    tools:context=".MainActivity">

    <View
        android:id="@+id/containerTop"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/background_view_top"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:src="@drawable/grupofasipe"
        app:layout_constraintTop_toTopOf="@id/containerTop"
        app:layout_constraintStart_toStartOf="@id/containerTop"
        app:layout_constraintEnd_toEndOf="@id/containerTop"
        app:layout_constraintBottom_toBottomOf="@id/containerTop" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/containerTop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/dark_cyan_green"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user"
            android:inputType="numberSigned"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_user"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/dark_cyan_green"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp"
            android:background="@drawable/background_edittext"
            android:drawableEnd="@drawable/ic_password"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkboxRememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutPassword"
        android:layout_marginTop="1dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEntrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_entrar"
        android:textAllCaps="false"
        android:enabled="true"
        android:background="@drawable/background_button_select"
        app:layout_constraintTop_toBottomOf="@id/checkboxRememberPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        />




    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btEntrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/background_view_button"
        app:layout_constraintTop_toBottomOf="@id/progressBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"
        />

    


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>